Deepthi/Melanie | #3222 |BugFix - Cancel link overlapping with success message

--- a/datawinners/media/css/scss/section_questionnaire.scss
+++ b/datawinners/media/css/scss/section_questionnaire.scss
@@ -496,3 +496,6 @@
     @extend .dropdown_style;
   }
 }
+#message-label{
+  width:789px;
+}
