--- a/datawinners/media/css/scss/section_subjects.scss
+++ b/datawinners/media/css/scss/section_subjects.scss
@@ -181,7 +181,7 @@
 
 #my_subjects_links {
   float:right;
-  margin: 10px 0 20px 0;
+  margin: 20px 0 20px 0;
   ul {
     margin: 0;
     padding: 0;
@@ -543,4 +543,7 @@ span.paginate_more_disabled {
   li.active{
     padding-bottom: 17px;
   }
+}
+.questionnaire_code{
+  margin: 15px 0px 0px 0px;
 }
